# sv-mint

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  build.rs  plan_cst_width_package.txt  rustfmt.toml  sv-mint.toml
docs/: configuration.md  development.md  internal_spec.md  plugin_author.md  rule_detail_user.md  rule_inventory.md  rule_reference.md  user_guide.md
fixtures/: always_comb_uses_blocking_bad.sv  always_comb_uses_blocking_good.sv  always_ff_violation.sv  always_is_structured_bad.sv  always_plain.sv  always_structured_ok.sv  bom_crlf_violation.sv  case_begin_violation.sv  case_has_default_branch_bad.sv  case_has_default_branch_good.sv  case_missing_default.sv  case_missing_default_unique_ok.sv  case_unique_violation.sv  comparison_violation.sv  default_nettype_begins_with_none_good.sv  default_nettype_ends_with_wire_good.sv  default_nettype_late.sv  default_nettype_missing.sv  default_nettype_wire.sv  disable_fork_label_violation.sv  disable_targets_fork_only_good.sv  dpi_violation.sv  end_else_newline.sv  enum_values_case_violation.sv  enum_values_uppercase_good.sv  fork_label_violation.sv  format_line_length_violation.sv  function_scope_violation.sv  function_with_explicit_types.sv  functions_have_explicit_types_good.sv  functions_marked_automatic_or_static_bad.sv  functions_marked_automatic_or_static_good.sv  global_define_violations.sv  global_macros.svh  header_missing.sv  if_without_begin.sv  include_child.sv  include_top.sv  indent_violation.sv  instances_use_named_ports_good.sv  (+71 more)
plugins/: always_comb.no_nonblocking.cst.py  (+238 more)
(+540 files in other folders)
