[package]
name = "sv-mint"
version = "2.7.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sv-parser = "=0.13.4"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"